deploy: db9179895971829770ac030b2a43ae66dbfc53e6

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@ i. Activiteiten modus</li>
 <h1 id="activiteiten-modus">Activiteiten modus</h1>
 <ul>
 <li>Programma's starten</li>
+<li>Documenten zoeken</li>
 <li>Programma's wisselen</li>
 <li>Overzicht geopende programma's</li>
 <li>Dash tonen</li>
-<li>Documenten zoeken</li>
 </ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="3" data-theme="gaia" style="--theme:gaia;">
@@ -49,23 +49,35 @@ i. Activiteiten modus</li>
 <p><img src="./img/activiteiten-modus.png" alt="" style="width:900px;" /></p>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="5" data-theme="gaia" style="--theme:gaia;">
-<h1 id="in-activiteiten-modus">In activiteiten modus</h1>
 <ul>
-<li>kunt u typen in het zoekvak<br />
-<img src="img/zoekvak.png" alt="" />
-<ul>
-<li>om een ander programma te openen</li>
-<li>een document te zoeken</li>
+<li>kunt u typen in het zoekvak om een programma te openen</li>
 </ul>
-</li>
-<li>ziet u de dash <img src="img/dash.png" alt="" style="width:500px;" /> en kunt u met de muis één van de programma's hieruit openen
+<p><img src="img/openen-door-typen.gif" alt="" style="width:900px;" /></p>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="6" data-theme="gaia" style="--theme:gaia;">
 <ul>
+<li>kunt u typen in het zoekvak om een document te zoeken</li>
+</ul>
+<p><img src="img/document-openen-met-typen.gif" alt="" style="width:900px;" /></p>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="7" data-theme="gaia" style="--theme:gaia;">
+<ul>
+<li>kunt u van programma of werkblad wisselen<br />
+<img src="img/activiteiten-modus-wisselen.gif" alt="" style="width:900px;" /></li>
+</ul>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="8" data-theme="gaia" style="--theme:gaia;">
+<ul>
+<li>ziet u de dash <img src="img/dash.png" alt="" style="width:500px;" />
+<ul>
+<li>kunt u met de muis één van de programma's hieruit openen</li>
 <li>met CTRL ingedrukt klikken om een nieuw venster van een reeds geopend programma te verkrijgen</li>
+<li>op de 3x3 puntjes aan de rechterzijde klikken op applicatie modus in te gaan</li>
 </ul>
 </li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="6" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="9" data-theme="gaia" style="--theme:gaia;">
 <h1 id="applicatie-modus">Applicatie modus</h1>
 <p>Om applicatie modus binnen te gaan</p>
 <ul>
@@ -74,7 +86,7 @@ i. Activiteiten modus</li>
 <img src="img/geinstalleerde-programmas.png" alt="" style="width:600px;" /></li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="7" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="10" data-theme="gaia" style="--theme:gaia;">
 <h2 id="in-applicatie-modus">In applicatie modus</h2>
 <ul>
 <li>kunt u een programma openen door erop te klikken of</li>
