--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ i. Activiteiten modus</li>
 <ul>
 <li>GDM is de <strong>display manager</strong>, die regelt de graphische logins</li>
 <li>Inloggen met <code>(gebruikersnaam='tux', wachtwoord='tux')</code></li>
-<li>GNOME desktopmanager opent in 'activiteiten modus'</li>
+<li>GNOME desktopmanager opent in activiteiten modus</li>
 </ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="4" data-theme="gaia" style="--theme:gaia;">
@@ -49,82 +49,115 @@ i. Activiteiten modus</li>
 <p><img src="./img/activiteiten-modus.png" alt="" style="width:900px;" /></p>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="5" data-theme="gaia" style="--theme:gaia;">
+<h1 id="activiteiten-modus-komt-in-door">Activiteiten modus komt in door</h1>
 <ul>
-<li>kunt u typen in het zoekvak om een programma te openen</li>
+<li>op de activiteiten knop linksboven op de bovenbalk te klikken</li>
 </ul>
-<p><img src="img/openen-door-typen.gif" alt="" style="width:900px;" /></p>
+<p><img src="img/activiteiten-knop.png" alt="" /></p>
+<ul>
+<li><code>SUPER</code> in te drukken</li>
+</ul>
+<p><img src="img/super-toets.jpeg" alt="" style="width:300px;" /></p>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="6" data-theme="gaia" style="--theme:gaia;">
+<h2 id="in-activiteiten-modus">In activiteiten modus</h2>
+<ul>
+<li>kunt u typen in het zoekvak om een programma te openen<br />
+<img src="img/openen-door-typen.gif" alt="" style="width:850px;" /></li>
+</ul>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="7" data-theme="gaia" style="--theme:gaia;">
 <ul>
 <li>kunt u typen in het zoekvak om een document te zoeken</li>
 </ul>
 <p><img src="img/document-openen-met-typen.gif" alt="" style="width:900px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="7" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="8" data-theme="gaia" style="--theme:gaia;">
 <ul>
 <li>kunt u van programma of werkblad wisselen<br />
 <img src="img/activiteiten-modus-wisselen.gif" alt="" style="width:900px;" /></li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="8" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="9" data-theme="gaia" style="--theme:gaia;">
 <ul>
-<li>ziet u de dash <img src="img/dash.png" alt="" style="width:500px;" />
+<li>ziet u de dash <img src="img/dash.png" alt="" style="width:500px;" />, daarmee kunt u
 <ul>
-<li>kunt u met de muis één van de programma's hieruit openen</li>
+<li>met de muis één van de programma's hieruit openen</li>
 <li>met <code>CTRL</code> ingedrukt klikken om een nieuw venster van een reeds geopend programma te verkrijgen</li>
-<li>op de 3x3 puntjes aan de rechterzijde klikken op applicatie modus in te gaan</li>
+<li>op de 3x3 puntjes aan de rechterzijde klikken op applicatie modus in te gaan<br />
+<img src="img/3x3-puntjes-op-dash.png" alt="" style="width:300px;" /></li>
 </ul>
 </li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="9" data-theme="gaia" style="--theme:gaia;">
-<h1 id="met-de-dash">Met de dash</h1>
-<ul>
-<li>kunt u één van de programma's openen door met de muis op het icon te klikken<br />
-<img src="img/dash-toepassing-openen.gif" alt="" style="width:700px;" /></li>
-</ul>
-</section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="10" data-theme="gaia" style="--theme:gaia;">
+<h1 id="met-de-dash-kunt-u">Met de dash kunt u</h1>
 <ul>
-<li>kunt u een tweede venster van een programma openen door <code>CTRL</code> ingedrukt te houden terwijl u klikt<br />
-<img src="img/dash-tweede-venster-openen.gif" alt="" style="width:800px;" /></li>
+<li>één van de programma's openen door met de muis op het icon te klikken<br />
+<img src="img/dash-toepassing-openen.gif" alt="" style="width:700px;" /></li>
 </ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="11" data-theme="gaia" style="--theme:gaia;">
 <ul>
-<li>kunt u applicatie modus binnen gaan door op de 3x3 puntjes aan de rechterzijde te klikken<br />
-<img src="img/dash-naar-applicatie-modus.gif" alt="" style="width:900px;" /></li>
+<li>een tweede venster van een programma openen door <code>CTRL</code> ingedrukt te houden terwijl u klikt<br />
+<img src="img/dash-tweede-venster-openen.gif" alt="" style="width:800px;" /></li>
 </ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="12" data-theme="gaia" style="--theme:gaia;">
-<h1 id="applicatie-modus">Applicatie modus</h1>
-<p>Om applicatie modus binnen te gaan</p>
 <ul>
-<li>kunt u op de 3x3 puntjes aan de rechterzijde van de dash klikken of</li>
-<li><code>SUPER+A</code> op het toetsenbord indrukken<br />
-<img src="img/geinstalleerde-programmas.png" alt="" style="width:600px;" /></li>
+<li>applicatie modus binnen gaan door op de 3x3 puntjes aan de rechterzijde te klikken<br />
+<img src="img/dash-naar-applicatie-modus.gif" alt="" style="width:900px;" /></li>
 </ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="13" data-theme="gaia" style="--theme:gaia;">
+<h1 id="applicatie-modus">Applicatie modus</h1>
+<p>Is een onderdeel van activiteiten modus<br />
+<img src="img/geinstalleerde-programmas.png" alt="" style="width:800px;" /></p>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="14" data-theme="gaia" style="--theme:gaia;">
+<h1 id="u-gaat-applicatie-modus-binnen-door">U gaat applicatie modus binnen door</h1>
+<ul>
+<li>op de 3x3 puntjes aan de rechterzijde van de dash klikken als u in activiteiten modus bent</li>
+</ul>
+<p><img src="img/3x3-puntjes-op-dash.png" alt="" style="width:300px;" /></p>
+<ul>
+<li><code>SUPER+A</code> op het toetsenbord indrukken als u in normale modus bent</li>
+</ul>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="15" data-theme="gaia" style="--theme:gaia;">
+<h1 id="applicatie-modus-verlaat-u-door">Applicatie modus verlaat u door</h1>
+<ul>
+<li>op de 3x3 puntjes aan de rechterzijde van de dash te klikken om in activiteiten modus te blijven<br />
+<img src="img/3x3-puntjes-op-dash.png" alt="" style="width:200px;" /></li>
+<li><code>ESC</code> in te drukken om in activiteiten modus te blijven
+<ul>
+<li>eventueel nogmaals <code>ESC</code> of <code>SUPER</code> te in drukken om in normale modus te komen</li>
+</ul>
+</li>
+<li><code>SUPER+A</code> om in activiteiten te blijven</li>
+<li><code>SUPER</code> in te drukken om naar normale modus te komen</li>
+</ul>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="16" data-theme="gaia" style="--theme:gaia;">
 <h2 id="in-applicatie-modus">In applicatie modus</h2>
 <ul>
 <li>kunt u een programma openen door erop te klikken of<br />
 <img src="img/applicatie-modus-toepassing-openen.gif" alt="" style="width:800px;" /></li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="14" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="17" data-theme="gaia" style="--theme:gaia;">
 <ul>
 <li>een programma slepen naar een werkblad om het te openen<br />
 <img src="img/slepen-in-activiteiten-modus.gif" alt="" style="width:1000px;" /></li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="15" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="18" data-theme="gaia" style="--theme:gaia;">
 <ul>
 <li>kunt u een programma toevoegen aan de dash<br />
 <img src="img/dash-toepassing-toevoegen.gif" alt="" style="width:1000px;" /></li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="16" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="19" data-theme="gaia" style="--theme:gaia;">
 <ul>
 <li>kunt u een programma uit de dash verwijderen door het naar de 3x3 puntjes rechts te slepen<br />
 <img src="img/dash-toepassing-verwijderen.gif" alt="" style="width:960px;" /></li>
