--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ i. Activiteiten modus</li>
 <p><img src="./img/activiteiten-modus.png" alt="" style="width:950px;" /></p>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="7" data-theme="gaia" style="--theme:gaia;">
-<h3 id="activiteiten-modus-komt-in-door">Activiteiten modus komt in door</h3>
+<h3 id="activiteiten-modus-komt-u-in-door">Activiteiten modus komt u in door</h3>
 <ul>
 <li>op de activiteiten knop linksboven op de bovenbalk te klikken</li>
 </ul>
@@ -321,25 +321,25 @@ bestaat uit</p>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="36" data-theme="gaia" style="--theme:gaia;">
 <h3 id="voorbeelden-1">Voorbeelden</h3>
 <ul>
-<li><code>SUPER+1</code> om firefox <img src="img/firefox-icon.png" alt="" style="width:100px;" /> te openen</li>
-<li><code>SUPER+3</code> om writer <img src="img/writer-icon.png" alt="" style="width:100px;" /> te openen</li>
-<li><code>SUPER+4</code> om bestanden <img src="img/bestanden-icon.png" alt="" style="width:100px;" /> te openen</li>
-<li><code>SUPER+5</code> om software <img src="img/software-icon.png" alt="" style="width:100px;" /> te openen</li>
+<li>klik op een bestanden icon <img src="img/bestanden-icon.png" alt="" style="width:80px;" /> op de dash <img src="img/dash.png" alt="" />
+<ul>
+<li>Ga activiteiten in via
+<ul>
+<li>op <img src="img/activiteiten-knop.png" alt="" /> te klikken of</li>
+<li><code>SUPER</code> in te drukken</li>
+</ul>
+</li>
+<li>Klik op <img src="img/bestanden-icon.png" alt="" style="width:80px;" /> bestanden te openen</li>
+</ul>
+</li>
 </ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="37" data-theme="gaia" style="--theme:gaia;">
 <ul>
-<li>Via klikken op een icon op de dash <img src="img/dash.png" alt="" />
-<ul>
-<li>Ga activiteiten in via
-<ul>
-<li>op <img src="img/activiteiten-knop.png" alt="" /> te klikken</li>
-<li><code>SUPER</code> in te drukken</li>
-</ul>
-</li>
-<li>Klik op <img src="img/bestanden-icon.png" alt="" style="width:100px;" /> betanden te openen</li>
-</ul>
-</li>
+<li><code>SUPER+1</code> om firefox <img src="img/firefox-icon.png" alt="" style="width:100px;" /> te openen</li>
+<li><code>SUPER+3</code> om writer <img src="img/writer-icon.png" alt="" style="width:100px;" /> te openen</li>
+<li><code>SUPER+4</code> om bestanden <img src="img/bestanden-icon.png" alt="" style="width:100px;" /> te openen</li>
+<li><code>SUPER+5</code> om software <img src="img/software-icon.png" alt="" style="width:100px;" /> te openen</li>
 </ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="38" data-theme="gaia" style="--theme:gaia;">
