deploy: a6e09a424c47a16bbf5e0dccbad6c62244b82298

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ bestaat uit</p>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="36" data-theme="gaia" style="--theme:gaia;">
 <h3 id="voorbeelden-1">Voorbeelden</h3>
 <ul>
-<li>klik op een bestanden icon <img src="img/bestanden-icon.png" alt="" style="width:80px;" /> op de dash <img src="img/dash.png" alt="" />
+<li>klik op het bestanden icon <img src="img/bestanden-icon.png" alt="" style="width:80px;" /> op de dash <img src="img/dash.png" alt="" />
 <ul>
 <li>Ga activiteiten in via
 <ul>
@@ -329,7 +329,7 @@ bestaat uit</p>
 <li><code>SUPER</code> in te drukken</li>
 </ul>
 </li>
-<li>Klik op <img src="img/bestanden-icon.png" alt="" style="width:80px;" /> bestanden te openen</li>
+<li>Klik op <img src="img/bestanden-icon.png" alt="" style="width:80px;" /> om de bestanden toepassing te openen</li>
 </ul>
 </li>
 </ul>
