deploy: 4f19987eaa0e012015488d91815bbdd0a47f395b

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <h2 id="onderdelen-van-de-cursus">Onderdelen van de cursus</h2>
 <ol>
 <li>Presentatie</li>
-<li><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/samenvatting.pdf">Samenvatting en oefeningen</a></li>
+<li><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/samenvatting.pdf">Samenvatting</a></li>
+<li><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/oefeningen.pdf">Oefeningen</a></li>
 <li><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/begrippen.pdf">Begrippenlijst</a><br />
 </li>
 </ol>
