--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </foreignObject><foreignObject width="1280" height="720" data-marpit-advanced-background="pseudo"><section data-theme="gaia" style="" data-marpit-advanced-background="pseudo" data-marpit-advanced-background-split="right"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section data-theme="gaia" style="--theme:gaia;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="background" data-marpit-advanced-background-split="right"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;img/tux-gnu_linux.png&quot;);background-size:100% auto;"></figure></div></section></foreignObject><foreignObject width="50%" height="720"><section id="2" data-theme="gaia" style="--theme:gaia;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="content" data-marpit-advanced-background-split="right">
 <h2 id="onderdelen-van-de-cursus">Onderdelen van de cursus</h2>
 <ol>
-<li>Presentatie</li>
+<li>Presentatie (<a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/presentatie.zip">download presentatie voor offline gebruik</a>)</li>
 <li><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/samenvatting.pdf">Samenvatting</a></li>
 <li><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/oefeningen.pdf">Oefeningen</a></li>
 <li><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/begrippen.pdf">Begrippenlijst</a><br />
