deploy: 51921c449d7ba5c0c9c8f4108c2f61450f7d02cb

--- a/index.html
+++ b/index.html
@@ -69,13 +69,26 @@
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="8" data-theme="gaia" style="--theme:gaia;">
 <h3 id="gnome-desktop-manager-width100px">GNOME desktop manager <img src="img/GNOME-logo.png" alt="" style="width:100px;" /></h3>
 <ul>
-<li>GNOME is de standaard <strong>desktop-manager</strong>
+<li>
+<p>GNOME is de standaard <strong>desktop-manager</strong></p>
 <ul>
-<li>regelt het tekenen van de window decoraties</li>
-<li>voorziet in icons, toolbars, wallpapers en desktop widgets</li>
-<li>werkt met twee modi:<br />
-i. Normale modus<br />
-i. Activiteiten modus</li>
+<li>
+<p>regelt het tekenen van de window decoraties</p>
+</li>
+<li>
+<p>voorziet in icons, toolbars, wallpapers en desktop widgets</p>
+</li>
+<li>
+<p>werkt met twee modi:</p>
+<ol>
+<li>
+<p>Normale modus</p>
+</li>
+<li>
+<p>Activiteiten modus</p>
+</li>
+</ol>
+</li>
 </ul>
 </li>
 </ul>
@@ -350,7 +363,7 @@ bestaat uit</p>
 <ul>
 <li>Nieuw venster openen</li>
 <li>Details van de toepassing in Software toepassing</li>
-<li>Venster sluiten</li>
+<li>Toepassing afsluiten (sluit alle vensters van deze toepassing)</li>
 </ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="40" data-theme="gaia" style="--theme:gaia;">
