deploy: db252c4a5b136e6ec30994d7c31edc51e6302554

--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@ Indien u het laatste open venster van een toepassing sluit, sluit u ook de toepa
 <li>Wisselen tussen vensters</li>
 <li>Extra venster openen</li>
 <li>Details in de Software toepassing zien</li>
-<li>Toepassing afsluiten (sluit alle vensters van deze toepassing)</li>
+<li>Toepassing afsluiten of venster sluiten</li>
 </ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="65" data-theme="gaia" style="--theme:gaia;">
