deploy: 2278cb84234b0bccd13c06d354f13efd6a2ebf9c

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <h2 id="onderdelen-van-de-cursus">Onderdelen van de cursus</h2>
 <ol>
 <li>Presentatie (<a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/presentatie.zip">download presentatie voor offline gebruik</a>)</li>
-<li><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/samenvatting.pdf">Samenvatting</a></li>
-<li><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/oefeningen.pdf">Oefeningen</a></li>
-<li><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/begrippen.pdf">Begrippenlijst</a><br />
+<li><a href="samenvatting.html">Samenvatting</a> <a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/samenvatting.pdf">PDF versie</a></li>
+<li><a href="oefeningen.html">Oefeningen</a> <a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/oefeningen.pdf">PDF versie</a></li>
+<li><a href="begrippen.html">Begrippenlijst</a> <a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/begrippen.pdf">PDF versie</a><br />
 </li>
 </ol>
 </section>
