deploy: 9ef66b3373e6e27224d93fd0c0e15e2154283d5d

--- a/oefeningen.html
+++ b/oefeningen.html
@@ -205,22 +205,22 @@
 <li><p>Sneltoetsen toevoegen. Open sneltoetsen in de Instellingen door:</p>
 <ol type="a">
 <li><p><code>SUPER snelt ENTER</code></p></li>
-<li><p>Klik op “Sneltoetsen weergeven en aanpassen”</p></li>
-<li><p>Ken onder de afdeling “Starters” <code>SUPER+E</code> aan “Persoonlijke map”</p></li>
-<li><p>Ken onder de afdeling “Starters” <code>SUPER+C</code> aan “Rekenmachine starten”</p></li>
-<li><p>Ken onder de afdeling “Starters” <code>SUPER+I</code> aan Instellingen</p></li>
+<li><p>klik op “Sneltoetsen weergeven en aanpassen”</p></li>
+<li><p>ken onder de afdeling “Starters” <code>SUPER+E</code> aan “Persoonlijke map”</p></li>
+<li><p>ken onder de afdeling “Starters” <code>SUPER+C</code> aan “Rekenmachine starten”</p></li>
+<li><p>ken onder de afdeling “Starters” <code>SUPER+I</code> aan Instellingen</p></li>
 </ol></li>
 <li><p>Aangepaste sneltoetsen toevoegen. Open sneltoetsen in de Instellingen.</p>
 <ol type="a">
-<li><p>Open de afdeling “Aangepaste sneltoets” (onderaan).</p></li>
+<li><p>open de afdeling “Aangepaste sneltoets” (onderaan).</p></li>
 <li><p><code>SUPER+SHIFT+I</code> toekennen aan “Afstellingen”</p>
 <ol type="i">
-<li><p>Klik op de + onderaan</p></li>
-<li><p>Vul onder “Naam” <code>Afstellingen</code> in</p></li>
-<li><p>Vul onder “Opdracht” <code>gnome-tweaks</code> in</p></li>
-<li><p>Klik op “Sneltoets instellen” en druk <code>SUPER+SHIFT+I</code></p></li>
+<li><p>klik op de + onderaan</p></li>
+<li><p>vul onder “Naam” <code>Afstellingen</code> in</p></li>
+<li><p>vul onder “Opdracht” <code>gnome-tweaks</code> in</p></li>
+<li><p>klik op “Sneltoets instellen” en druk <code>SUPER+SHIFT+I</code></p></li>
 </ol></li>
-<li><p>Ken <code>ALT+CTRL+T</code> toe aan de opdracht <code>gnome-terminal</code> onder de naam <code>Terminal</code>.</p></li>
+<li><p>ken <code>ALT+CTRL+T</code> toe aan de opdracht <code>gnome-terminal</code> onder de naam <code>Terminal</code>.</p></li>
 </ol></li>
 <li><p>Sneltoetsen opzoeken. Open de sneltoetsen instellingen zoals in beschreven in de eerste oefening.</p>
 <ol type="a">
@@ -239,25 +239,25 @@
 </ol></li>
 <li><p>Open en sluit terminal 3</p>
 <ol type="a">
-<li><p>Ga in applicatie modus met <code>SUPER+A</code></p></li>
-<li><p>Klik op het terminal venster icon <img src="img/terminalvenster-icon.png" width="50" /></p></li>
-<li><p>Sluit het venster met de muis door op het kruisje rechtsboven te klikken</p></li>
+<li><p>ga in applicatie modus met <code>SUPER+A</code></p></li>
+<li><p>klik op het terminal venster icon <img src="img/terminalvenster-icon.png" width="50" /></p></li>
+<li><p>sluit het venster met de muis door op het kruisje rechtsboven te klikken</p></li>
 </ol></li>
 <li><p>Open en sluit terminal 4</p>
 <ol type="a">
-<li><p>Ga in applicatie modus met de muis:</p>
+<li><p>ga in applicatie modus met de muis:</p>
 <ol type="i">
-<li><p>Klik op <img src="img/activiteiten-knop.png" width="100" /></p></li>
-<li><p>Klik op de 3x3 puntjes op de dash <img src="img/3x3-puntjes-op-dash.png" width="100" /></p></li>
+<li><p>klik op <img src="img/activiteiten-knop.png" width="100" /></p></li>
+<li><p>klik op de 3x3 puntjes op de dash <img src="img/3x3-puntjes-op-dash.png" width="100" /></p></li>
 </ol></li>
-<li><p>Sleep het <img src="img/terminalvenster-icon.png" width="50" /> naar het eerste werkblad</p></li>
-<li><p>Klik op <img src="img/activiteiten-knop.png" width="100" /> om applicatie modus te verlaten</p></li>
-<li><p>Klik op een willekeurige plek van het terminalvenster</p></li>
-<li><p>Sluit het terminalvenster door <code>ALT+F4</code> in te drukken</p></li>
+<li><p>sleep het <img src="img/terminalvenster-icon.png" width="50" /> naar het eerste werkblad</p></li>
+<li><p>klik op <img src="img/activiteiten-knop.png" width="100" /> om applicatie modus te verlaten</p></li>
+<li><p>klik op een willekeurige plek van het terminalvenster</p></li>
+<li><p>sluit het terminalvenster door <code>ALT+F4</code> in te drukken</p></li>
 </ol></li>
 <li><p>Open met <code>ALT+CTRL+T</code> een terminalvenster</p>
 <ol type="a">
-<li><p>Gebruik het toepassingmenu om een extra terminalvenster te openen</p>
+<li><p>gebruik het toepassingmenu om een extra terminalvenster te openen</p>
 <ol type="i">
 <li><p><code>SUPER+F10</code></p></li>
 <li><p><code>ENTER</code> op “Nieuw venster”</p></li>
@@ -265,100 +265,100 @@
 <li><p>Sluit het tweede terminalvenster af via het toepassingsmenu</p>
 <ol type="i">
 <li><p><code>SUPER+F10</code></p></li>
-<li><p>Gebruik de pijltjes toetsen om naar “Afsluiten” te komen</p></li>
-<li><p>Druk <code>SPATIEBALK</code></p></li>
+<li><p>gebruik de pijltjes toetsen om naar “Afsluiten” te komen</p></li>
+<li><p>druk <code>SPATIEBALK</code></p></li>
 </ol></li>
-<li><p>Herhaal dit voor het eerste terminalvenster</p></li>
+<li><p>herhaal dit voor het eerste terminalvenster</p></li>
 </ol></li>
 <li><p>Open en sluit twee firefox vensters</p>
 <ol type="a">
-<li><p>Druk <code>SUPER+1</code> om firefox te openen</p></li>
-<li><p>Maak een nieuw venster aan via het toepassingsmenu</p>
+<li><p>druk <code>SUPER+1</code> om firefox te openen</p></li>
+<li><p>maak een nieuw venster aan via het toepassingsmenu</p>
 <ol type="i">
 <li><p><code>SUPER+F10</code></p></li>
 <li><p><code>ENTER</code> op “Nieuw venster”</p></li>
 </ol></li>
-<li><p>Sluit beide vensters met het toepassingsmenu</p>
+<li><p>sluit beide vensters met het toepassingsmenu</p>
 <ol type="i">
 <li><p><code>SUPER+F10</code></p></li>
-<li><p>Gebruik de pijltjes toetsen om naar “Afsluiten” te komen</p></li>
-<li><p>Druk <code>SPATIEBALK</code></p></li>
+<li><p>gebruik de pijltjes toetsen om naar “Afsluiten” te komen</p></li>
+<li><p>druk <code>SPATIEBALK</code></p></li>
 </ol></li>
 </ol></li>
 <li><p>Open en sluit twee LibreOffice writer vensters met het bestandsmenu</p>
 <ol type="a">
-<li><p>Druk <code>SUPER+3</code></p></li>
-<li><p>Druk <code>F10</code> om de menubalk voor Writer te activeren</p></li>
-<li><p>Druk <code>PIJLTJE-OMLAAG</code></p></li>
-<li><p>Druk <code>PIJLTJE-NAAR-RECHTS</code></p></li>
-<li><p>Druk <code>SPATIEBALK</code></p></li>
-<li><p>Druk <code>F10</code> om de menubalk voor Writer te activeren</p></li>
-<li><p>Druk <code>PIJLTJE-OMHOOG</code> om snel bij “Afsluiten” te komen</p></li>
-<li><p>Druk <code>SPATIEBALK</code></p></li>
+<li><p>druk <code>SUPER+3</code></p></li>
+<li><p>druk <code>F10</code> om de menubalk voor Writer te activeren</p></li>
+<li><p>druk <code>PIJLTJE-OMLAAG</code></p></li>
+<li><p>druk <code>PIJLTJE-NAAR-RECHTS</code></p></li>
+<li><p>druk <code>SPATIEBALK</code></p></li>
+<li><p>druk <code>F10</code> om de menubalk voor Writer te activeren</p></li>
+<li><p>druk <code>PIJLTJE-OMHOOG</code> om snel bij “Afsluiten” te komen</p></li>
+<li><p>druk <code>SPATIEBALK</code></p></li>
 </ol></li>
 <li><p>Open twee LibreOffice writer vensters en sluit ze één voor één</p>
 <ol type="a">
-<li><p>Druk <code>SUPER+3</code></p></li>
-<li><p>Druk <code>CTRL+N</code> om via de sneltoets voor een nieuw venster van LibreOffice een tweede venster te openen</p></li>
-<li><p>Druk <code>CTRL+W</code> om het tweede venster te sluiten</p></li>
-<li><p>Druk <code>CTRL+W</code> om het eerste venster te sluiten</p></li>
-<li><p>Druk <code>CTRL+Q</code> om LibreOffice af te sluiten</p></li>
+<li><p>druk <code>SUPER+3</code></p></li>
+<li><p>druk <code>CTRL+N</code> om via de sneltoets voor een nieuw venster van LibreOffice een tweede venster te openen</p></li>
+<li><p>druk <code>CTRL+W</code> om het tweede venster te sluiten</p></li>
+<li><p>druk <code>CTRL+W</code> om het eerste venster te sluiten</p></li>
+<li><p>druk <code>CTRL+Q</code> om LibreOffice af te sluiten</p></li>
 </ol></li>
 <li><p>Open twee LibreOffice writer vensters en sluit ze één voor één</p>
 <ol type="a">
-<li><p>Druk <code>SUPER+3</code></p></li>
-<li><p>Druk <code>CTRL+N</code> om via de sneltoets voor een nieuw venster van LibreOffice een tweede venster te openen</p></li>
-<li><p>Klik op het kruisje rechtsboven van het tweede venster</p></li>
-<li><p>Klik op het kruisje rechtsboven van het eerste venster</p></li>
+<li><p>druk <code>SUPER+3</code></p></li>
+<li><p>druk <code>CTRL+N</code> om via de sneltoets voor een nieuw venster van LibreOffice een tweede venster te openen</p></li>
+<li><p>klik op het kruisje rechtsboven van het tweede venster</p></li>
+<li><p>klik op het kruisje rechtsboven van het eerste venster</p></li>
 </ol></li>
 <li><p>Open en sluit een LibreOffice calc venster</p>
 <ol type="a">
-<li><p>Druk <code>SUPER spread ENTER</code></p></li>
-<li><p>Sluit met <code>ALT+F4</code></p></li>
+<li><p>druk <code>SUPER spread ENTER</code></p></li>
+<li><p>sluit met <code>ALT+F4</code></p></li>
 </ol></li>
 <li><p>Open en sluit een eenvoudige (platte) tekst editor</p>
 <ol type="a">
-<li><p>Druk <code>SUPER tekst ENTER</code></p></li>
-<li><p>Sluit met <code>ALT+F4</code></p></li>
+<li><p>druk <code>SUPER tekst ENTER</code></p></li>
+<li><p>sluit met <code>ALT+F4</code></p></li>
 </ol></li>
 <li><p>Open een rekenmachine en reken 6 keer 7 uit</p>
 <ol type="a">
-<li><p>Druk <code>SUPER+C</code></p></li>
-<li><p>Druk <code>6*7 ENTER</code></p></li>
-<li><p>Sluit met <code>ALT+F4</code></p></li>
+<li><p>druk <code>SUPER+C</code></p></li>
+<li><p>druk <code>6*7 ENTER</code></p></li>
+<li><p>sluit met <code>ALT+F4</code></p></li>
 </ol></li>
 <li><p>Reken 2 + 4 x 10 uit via het zoekvak</p>
 <ol type="a">
-<li><p>Druk <code>SUPER 2+4*10</code></p></li>
-<li><p>Druk <code>SUPER</code> om in normale modus terug te keren</p></li>
+<li><p>druk <code>SUPER 2+4*10</code></p></li>
+<li><p>druk <code>SUPER</code> om in normale modus terug te keren</p></li>
 </ol></li>
 <li><p>Open een tekst editor via applicatie modus</p>
 <ol type="a">
-<li><p>Ga met de muis naar applicatie modus (twee stappen)</p></li>
-<li><p>Klik rechts op &gt; om naar de tweede pagina te komen</p></li>
-<li><p>Klik op <img src="img/teksteditor-icon.png" width="50" /></p></li>
-<li><p>Open een tweede venster met <code>CTRL+N</code></p></li>
-<li><p>Sluit tweede venster met <code>ALT+F4</code></p></li>
-<li><p>Sluit eerste venster met <code>ALT+F4</code></p></li>
+<li><p>ga met de muis naar applicatie modus (twee stappen)</p></li>
+<li><p>klik rechts op &gt; om naar de tweede pagina te komen</p></li>
+<li><p>klik op <img src="img/teksteditor-icon.png" width="50" /></p></li>
+<li><p>open een tweede venster met <code>CTRL+N</code></p></li>
+<li><p>sluit tweede venster met <code>ALT+F4</code></p></li>
+<li><p>sluit eerste venster met <code>ALT+F4</code></p></li>
 </ol></li>
 <li><p>Open een tekst editor via applicatie modus</p>
 <ol type="a">
-<li><p>Druk <code>SUPER+A</code></p></li>
-<li><p>Druk <code>PageDown</code> om op de tweede pagina te komen</p></li>
-<li><p>Sleep <img src="img/teksteditor-icon.png" width="50" /> naar het eerste werkblad</p></li>
-<li><p>Druk tweemaal <code>ESC</code> om in normale modus te komen</p></li>
-<li><p>Sluit het venster met <code>ALT+F4</code></p></li>
+<li><p>druk <code>SUPER+A</code></p></li>
+<li><p>druk <code>PageDown</code> om op de tweede pagina te komen</p></li>
+<li><p>sleep <img src="img/teksteditor-icon.png" width="50" /> naar het eerste werkblad</p></li>
+<li><p>druk tweemaal <code>ESC</code> om in normale modus te komen</p></li>
+<li><p>sluit het venster met <code>ALT+F4</code></p></li>
 </ol></li>
 <li><p>Open en sluit twee firefox vensters met de muis</p>
 <ol type="a">
-<li><p>Ga activiteiten modus in door op <img src="img/activiteiten-knop.png" width="100" /> te klikken</p></li>
-<li><p>Klik op <img src="img/firefox-icon.png" width="50" /> op de dash</p></li>
-<li><p>Ga opnieuw activiteiten modus in door op <img src="img/activiteiten-knop.png" width="100" /> te klikken</p></li>
-<li><p>Klik met <code>CTRL</code> ingedrukt op <img src="img/firefox-icon.png" width="50" /> op de dash</p></li>
-<li><p>Verlaat activiteiten modus door op <img src="img/activiteiten-knop.png" width="100" /> te klikken</p></li>
-<li><p>Klik de beide vensters dicht door op het kruisje rechtsboven te klikken</p>
+<li><p>ga activiteiten modus in door op <img src="img/activiteiten-knop.png" width="100" /> te klikken</p></li>
+<li><p>klik op <img src="img/firefox-icon.png" width="50" /> op de dash</p></li>
+<li><p>ga opnieuw activiteiten modus in door op <img src="img/activiteiten-knop.png" width="100" /> te klikken</p></li>
+<li><p>klik met <code>CTRL</code> ingedrukt op <img src="img/firefox-icon.png" width="50" /> op de dash</p></li>
+<li><p>verlaat activiteiten modus door op <img src="img/activiteiten-knop.png" width="100" /> te klikken</p></li>
+<li><p>klik de beide vensters dicht door op het kruisje rechtsboven te klikken</p>
 <ol type="i">
-<li>Noem twee manieren waarop dit sluiten van beide vensters in één keer had gekunt (er zijn drie manieren)</li>
+<li>noem twee manieren waarop dit sluiten van beide vensters in één keer had gekunt (er zijn drie manieren)</li>
 </ol></li>
 </ol></li>
 <li><p>Som manieren waarop een toepassing, waaraan een sneltoets is toegekend, maar niet op de dash staat, kan worden gestart (vier manieren)</p></li>
@@ -366,37 +366,56 @@
 <li><p>Op welke wijzen kan een extra venster worden geopend van toepassingen (die extra vensters toestaan)? (vier manieren)</p></li>
 <li><p>Wat is de toetscombinatie waarmee een venster wordt gesloten?</p></li>
 <li><p>Wat is een gangbare toetscombinatie waarmee een toepassing wordt afgesloten?</p></li>
-<li><p>Waarom is een goed idee om toepassingen die u veel gebruikt aan de dash toe te voegen? (twee redenen) # Belangrijke toepassingen</p></li>
+<li><p>Waarom is een goed idee om toepassingen die u veel gebruikt aan de dash toe te voegen? (twee redenen)</p></li>
 </ol>
+<h1 id="belangrijke-toepassingen">Belangrijke toepassingen</h1>
 <h2 id="firefox">Firefox</h2>
 <ol type="1">
-<li>Start Firefox met <code>SUPER+1</code>.</li>
-</ol>
+<li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
 <li><p>ga naar de URL: <code>github.com/slspeek/beginners-cursus-linux</code>.<br />
 </p></li>
 <li><p>scroll omlaag en ga via de link naar de presentatie van de cursus.</p></li>
 <li><p>sluit de browser af met <code>CTRL+Q</code></p></li>
-</ul>
-<ol type="1">
-<li>Start Firefox.</li>
-</ol>
+</ul></li>
+<li><p>Start Firefox.</p>
 <ul>
-<li><p>En ga naar <code>debian.org</code>.</p></li>
-<li><p>Open een extra tabblad met <code>CTRL+T</code>, merk op dat u gelijk het webadres kunt intypen. Ga naar <code>tldp.org</code>.</p></li>
-<li><p>Ga naar het eerste tabblad door <code>CTRL+TAB</code> in te drukken.</p></li>
-<li><p>Sluit <code>debian.org</code>, met <code>CTRL+W</code>.</p></li>
-<li><p>Sluit de browser af door het laatste tabblad te sluiten</p></li>
-</ul>
-<ol type="1">
-<li>Start Firefox met <code>SUPER+1</code></li>
-</ol>
+<li><p>ga naar <code>debian.org</code>.</p></li>
+<li><p>open een extra tabblad met <code>CTRL+T</code>, merk op dat u gelijk het webadres kunt intypen. Ga naar <code>tldp.org</code>.</p></li>
+<li><p>ga naar het eerste tabblad door <code>CTRL+TAB</code> in te drukken.</p></li>
+<li><p>sluit <code>debian.org</code>, met <code>CTRL+W</code>.</p></li>
+<li><p>sluit de browser af door het laatste tabblad te sluiten</p></li>
+</ul></li>
+<li><p>Start Firefox met <code>SUPER+1</code></p>
 <ul>
-<li><p>Ga naar ‘Add-ons en thema’s’ met <code>CTRL+SHIFT+A</code> of via het hamburger menu rechtbovenin.</p></li>
-<li><p>Selecteer aan de linkerzijde pagina ‘Extensies’</p></li>
-<li><p>Type in het zoekvak <code>Adblocker for Youtube</code> en installeer deze extensie</p></li>
-<li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
-</ul>
+<li><p>ga naar ‘Add-ons en thema’s’ met <code>CTRL+SHIFT+A</code> of via het hamburger menu rechtbovenin.</p></li>
+<li><p>selecteer aan de linkerzijde pagina ‘Extensies’</p></li>
+<li><p>type in het zoekvak <code>Adblocker for Youtube</code> en installeer deze extensie</p></li>
+<li><p>sluit de browser af met <code>CTRL+Q</code></p></li>
+</ul></li>
+<li><p>Start Firefox met <code>SUPER+1</code></p>
+<ul>
+<li><p>ga via het hamburgermenu rechtsboven naar ‘Hulp’ en dan naar ‘Hulp verkrijgen’/</p></li>
+<li><p>type <code>navigatiegeschiedenis</code></p></li>
+<li><p>wat betekent geschiedenis in Firefox?</p></li>
+<li><p>sluit de browser af met <code>CTRL+Q</code></p></li>
+</ul></li>
+<li><p>Start Firefox met <code>SUPER+1</code>.</p>
+<ul>
+<li><p>ga naar de URL: <code>slspeek.github.io/beginners-cursus-linux/samenvatting.html</code>.</p></li>
+<li><p>scroll omlaag naar “Internet browser: Firefox” en dan naar “Essentiële extensies installeren”, klik op de link van “I don’t care about cookies”</p></li>
+<li><p>klik op de knop “Toevoegen aan Firefox”</p></li>
+<li><p>ga na met <code>CTRL+SHIFT+A</code> (Add-ons) of de extensie is geïnstalleerd</p></li>
+<li><p>sluit de browser af met <code>CTRL+Q</code></p></li>
+</ul></li>
+<li><p>Start Firefox met <code>SUPER+1</code>.</p>
+<ul>
+<li><p>ga naar de URL: <code>github.com/slspeek/beginners-cursus-linux</code></p></li>
+<li><p>scroll naar “Onderdelen”</p></li>
+<li><p>op de Samenvatting en Oefeningen op een apart tabblad (en blijf op de eerste pagina)</p></li>
+<li><p>gebruik <code>CTRL+TAB</code> om de twee nieuwe pagina’s te bekijken</p></li>
+</ul></li>
+</ol>
 <h1 id="toepassingen-installeren">Toepassingen installeren</h1>
 <ol type="1">
 <li><p>Standaard applicatie wijzigen</p>
