--- a/samenvatting.html
+++ b/samenvatting.html
@@ -159,6 +159,12 @@
 <li><p>Nieuw venster <code>CTRL+N</code></p></li>
 <li><p>Afsluiten <code>CTRL+Q</code></p></li>
 </ol></li>
+<li><p>Links openen op een nieuw tabblad</p>
+<ol type="i">
+<li><p><code>CTRL+SHIFT</code> met muisklik opent een link op een nieuw tabblad en schakelt naar het nieuw geopende tabblad</p></li>
+<li><p><code>CTRL</code> met muisklik opent een link op een nieuw tabblad</p></li>
+<li><p>Met <code>CTRL+TAB</code> wisselt u tussen de tabbladden. Met <code>CTRL+SHIFT+TAB</code> in tegengestelde richting.</p></li>
+</ol></li>
 <li><p>Essentiële extensies installeren</p>
 <ol type="i">
 <li><p><a href="https://addons.mozilla.org/nl/firefox/addon/adblock-for-youtube/?utm_source=addons.mozilla.org&amp;utm_medium=referral&amp;utm_content=search">Adblocker for Youtube</a></p></li>
