deploy: a8375be3ab4f8db0cb9e9e8148d432ef06a01f11

--- a/samenvatting.html
+++ b/samenvatting.html
@@ -165,6 +165,31 @@
 <li><p><code>CTRL</code> met muisklik opent een link op een nieuw tabblad</p></li>
 <li><p>Met <code>CTRL+TAB</code> wisselt u tussen de tabbladden. Met <code>CTRL+SHIFT+TAB</code> in tegengestelde richting.</p></li>
 </ol></li>
+<li><p>Plaatje openen in nieuw tabblad</p>
+<ul>
+<li>Klik rechts op plaatje en kies “Afbeelding openen in nieuw tabblad”</li>
+</ul></li>
+<li><p>Bladwijzers</p>
+<ul>
+<li><p>Aanmaken</p>
+<ul>
+<li><p><code>CTRL+D</code></p></li>
+<li><p>slepen naar Bladwijzerbalk</p></li>
+</ul></li>
+<li><p>Beheren</p>
+<ul>
+<li><p>via hamburgermenu “Bladwijzers &gt;” “Bladwijzers beheren”</p></li>
+<li><p><code>CTRL+SHIFT+O</code></p></li>
+</ul></li>
+<li><p>Bladwijzerbalk</p>
+<ul>
+<li><p>tonen en verbergen</p>
+<ul>
+<li><p>via hamburgermenu “Bladwijzers &gt;” “Bladwijzerbalk tonen/verbergen”</p></li>
+<li><p><code>CTRL+SHIFT+B</code></p></li>
+</ul></li>
+</ul></li>
+</ul></li>
 <li><p>Essentiële extensies installeren</p>
 <ol type="i">
 <li><p><a href="https://addons.mozilla.org/nl/firefox/addon/adblock-for-youtube/?utm_source=addons.mozilla.org&amp;utm_medium=referral&amp;utm_content=search">Adblocker for Youtube</a></p></li>
@@ -172,6 +197,53 @@
 <li><p><a href="https://addons.mozilla.org/nl/firefox/addon/i-dont-care-about-cookies/?utm_source=addons.mozilla.org&amp;utm_medium=referral&amp;utm_content=search">I don’t care about cookies</a></p></li>
 </ol></li>
 <li><p>Hulp zoeken over Firefox</p></li>
+</ol>
+<h2 id="bestandsbeheerder">Bestandsbeheerder</h2>
+<ol type="a">
+<li><p>Openen met</p>
+<ul>
+<li><p><code>SUPER+E</code></p></li>
+<li><p><code>SUPER+4</code></p></li>
+<li><p><code>SUPER best ENTER</code></p></li>
+<li><p>Klikken op <img src="img/bestanden-icon.png" width="30" /> op de dash</p></li>
+</ul></li>
+<li><p>Verschillende views</p>
+<ul>
+<li><p>iconen <img src="img/knop-icon-weergave.png" width="30" /></p></li>
+<li><p>lijst <img src="img/knop-lijst-weergave.png" width="30" /></p></li>
+<li><p>wel of geen verborgen bestanden tonen (<code>CTRL+H</code>)</p></li>
+</ul></li>
+<li><p>Omlaag en omhoog navigeren</p>
+<ul>
+<li><p>omlaag navigeren door op een map te dubbelklikken</p></li>
+<li><p>omhoog te navigeren door in de adresbalk op bovenliggende map te klikken</p>
+<ul>
+<li><code>ALT+PIJLTJE_OMHOOG</code></li>
+</ul></li>
+</ul></li>
+<li><p>Mappen maken</p>
+<ul>
+<li><p>via de drie puntjes boven elkaar <img src="img/persoonlijke-map-menu.png" height="20" /></p></li>
+<li><p><code>CTRL+SHIFT+N</code></p></li>
+</ul></li>
+<li><p>Bestanden of mappen verplaatsen</p>
+<ul>
+<li>sleep ze naar gewenste map</li>
+</ul></li>
+<li><p>Eigenschappen van bestanden en mappen</p>
+<ul>
+<li><p>klik rechts op item en kies “Eigenschappen”</p></li>
+<li><p><code>ALT+ENTER</code></p></li>
+</ul></li>
+<li><p>Bladwijzer maken van map of lokatie</p>
+<ul>
+<li><p>Navigeer naar map</p>
+<ul>
+<li><p>drie puntjes menu: “Toevoegen aan bladwijzers”</p></li>
+<li><p><code>CTRL+D</code></p></li>
+</ul></li>
+<li><p>Sleep map naar linkerpaneel boven “Nieuwe bladwijzer”</p></li>
+</ul></li>
 </ol>
 <h1 id="toepassingen-installeren">Toepassingen installeren</h1>
 <ol type="1">
