--- a/samenvatting.html
+++ b/samenvatting.html
@@ -174,20 +174,32 @@
 <li><p>Aanmaken</p>
 <ul>
 <li><p><code>CTRL+D</code></p></li>
-<li><p>slepen naar Bladwijzerbalk</p></li>
+<li><p>via hamburgermenu <img src="img/firefox-hamburgermenu.png" width="30" />, “Bladwijzers &gt;”, “Bladwijzer toevoegen”</p></li>
+<li><p><img src="img/firefox-slotje.png" width="30" /> slepen naar Bladwijzerbalk</p></li>
+<li><p>klikken op ster <img src="img/firefox-bladwijzer-ster-leeg.png" width="30" /> rechts van het adres in de adresbalk</p></li>
+</ul></li>
+<li><p>Verwijderen</p>
+<ul>
+<li><p>Klik op blauwe ster <img src="img/firefox-bladwijzer-ster-blauw.png" width="30" /> als u op die pagina bent, kies op de popup “Bladwijzer verwijderen”</p></li>
+<li><p>Via bladwijzers beheren</p></li>
+<li><p>Rechtsklikken op bladwijzer op bladwijzerbalk en “Bladwijzer verwijderen” kiezen</p></li>
 </ul></li>
 <li><p>Beheren</p>
 <ul>
-<li><p>via hamburgermenu “Bladwijzers &gt;” “Bladwijzers beheren”</p></li>
+<li><p>via hamburgermenu <img src="img/firefox-hamburgermenu.png" width="30" /> “Bladwijzers &gt;” “Bladwijzers beheren”</p></li>
 <li><p><code>CTRL+SHIFT+O</code></p></li>
 </ul></li>
 <li><p>Bladwijzerbalk</p>
 <ul>
 <li><p>tonen en verbergen</p>
 <ul>
-<li><p>via hamburgermenu “Bladwijzers &gt;” “Bladwijzerbalk tonen/verbergen”</p></li>
+<li><p>via hamburgermenu <img src="img/firefox-hamburgermenu.png" width="30" /> “Bladwijzers &gt;” “Bladwijzerbalk tonen/verbergen”</p></li>
 <li><p><code>CTRL+SHIFT+B</code></p></li>
 </ul></li>
+</ul></li>
+<li><p>Bladwijzers groeperen in mappen</p>
+<ul>
+<li>Via bladwijzers beheren <code>CTRL+SHIFT+O</code></li>
 </ul></li>
 </ul></li>
 <li><p>Essentiële extensies installeren</p>
@@ -196,7 +208,10 @@
 <li><p><a href="https://addons.mozilla.org/nl/firefox/addon/adblocker-ultimate/?utm_source=addons.mozilla.org&amp;utm_medium=referral&amp;utm_content=search">Adblocker Ultimate</a></p></li>
 <li><p><a href="https://addons.mozilla.org/nl/firefox/addon/i-dont-care-about-cookies/?utm_source=addons.mozilla.org&amp;utm_medium=referral&amp;utm_content=search">I don’t care about cookies</a></p></li>
 </ol></li>
-<li><p>Hulp zoeken over Firefox</p></li>
+<li><p>Hulp zoeken over Firefox</p>
+<ul>
+<li>Via hamburgermenu <img src="img/firefox-hamburgermenu.png" width="30" /> “Help &gt;”, “Hulp verkrijgen”</li>
+</ul></li>
 </ol>
 <h2 id="bestandsbeheerder">Bestandsbeheerder</h2>
 <ol type="a">
@@ -209,9 +224,9 @@
 </ul></li>
 <li><p>Verschillende views</p>
 <ul>
-<li><p>iconen <img src="img/knop-icon-weergave.png" width="30" /></p></li>
-<li><p>lijst <img src="img/knop-lijst-weergave.png" width="30" /></p></li>
-<li><p>wel of geen verborgen bestanden tonen (<code>CTRL+H</code>)</p></li>
+<li><p>rasterweergave <img src="img/knop-icon-weergave.png" width="30" /> <code>CTRL+2</code></p></li>
+<li><p>lijstweergave <img src="img/knop-lijst-weergave.png" width="30" /> <code>CTRL+1</code></p></li>
+<li><p>wel of geen verborgen bestanden tonen <code>CTRL+H</code></p></li>
 </ul></li>
 <li><p>Omlaag en omhoog navigeren</p>
 <ul>
