deploy: edf9bfdae04577e50e4f26835c9357c7a2e240e9

--- a/oefeningen.html
+++ b/oefeningen.html
@@ -400,18 +400,36 @@
 <li><p>bekijk grotere animatie</p></li>
 <li><p>sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
+<li><p>Start Firefox met <code>SUPER+1</code>.</p>
+<ul>
+<li><p>ga naar de URL: <code>github.com/slspeek/beginners-cursus-linux</code></p></li>
+<li><p>maak een bladwijzer met <code>CTRL+D</code></p></li>
+<li><p>sluit de browser af met <code>CTRL+Q</code></p></li>
+</ul></li>
+<li><p>Start Firefox met <code>SUPER+1</code>.</p>
+<ul>
+<li><p>ga met behulp van de bladwijzer naar de URL: <code>github.com/slspeek/beginners-cursus-linux</code></p>
+<ul>
+<li>maak bladwijzerbalk zichtbaar met <code>CTRL+SHIFT+B</code> als deze verborgen is</li>
+</ul></li>
+<li><p>scroll naar beneden naar de README naar “Onderdelen”</p></li>
+<li><p>klik op de link “Presentatie”</p></li>
+<li><p>maak een bladwijzer door rechts op <img src="img/firefox-bladwijzer-ster-leeg.png" /> te klikken</p></li>
+<li><p>sluit de browser af met <code>CTRL+Q</code></p></li>
+</ul></li>
+<li><p>Start Firefox met <code>SUPER+1</code>.</p>
+<ul>
+<li><p>ga met behulp van de bladwijzer naar de “Presentatie” van de cursus</p></li>
+<li><p>ga naar de tweede pagina</p></li>
+<li><p>klik met op “Samenvatting”</p></li>
+<li><p>maak een bladwijzer door <img src="img/firefox-slotje.png" /> naar de bladwijzerbalk te slepen</p></li>
+<li><p>sluit de browser af met <code>CTRL+Q</code></p></li>
+</ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code></p>
 <ul>
 <li><p>ga naar ‘Add-ons en thema’s’ met <code>CTRL+SHIFT+A</code> of via het hamburger menu rechtbovenin.</p></li>
 <li><p>selecteer aan de linkerzijde van de pagina ‘Extensies’</p></li>
 <li><p>type in het zoekvak <code>Adblocker for Youtube</code> en installeer deze extensie</p></li>
-<li><p>sluit de browser af met <code>CTRL+Q</code></p></li>
-</ul></li>
-<li><p>Start Firefox met <code>SUPER+1</code></p>
-<ul>
-<li><p>ga via het hamburgermenu rechtsboven naar ‘Hulp’ en dan naar ‘Hulp verkrijgen’</p></li>
-<li><p>type <code>navigatiegeschiedenis</code></p></li>
-<li><p>wat betekent geschiedenis in Firefox?</p></li>
 <li><p>sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
@@ -420,6 +438,13 @@
 <li><p>scroll omlaag naar “Internet browser: Firefox” en dan naar “Essentiële extensies installeren”, klik op de link van “I don’t care about cookies”</p></li>
 <li><p>klik op de knop “Toevoegen aan Firefox”</p></li>
 <li><p>ga na met <code>CTRL+SHIFT+A</code> (Add-ons) of de extensie is geïnstalleerd</p></li>
+<li><p>sluit de browser af met <code>CTRL+Q</code></p></li>
+</ul></li>
+<li><p>Start Firefox met <code>SUPER+1</code></p>
+<ul>
+<li><p>ga via het hamburgermenu rechtsboven naar ‘Hulp’ en dan naar ‘Hulp verkrijgen’</p></li>
+<li><p>type <code>navigatiegeschiedenis</code></p></li>
+<li><p>wat betekent geschiedenis in Firefox?</p></li>
 <li><p>sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
 </ol>
